[ML] Fixes overflowing text in the anomalies table expanded row (#28372) (#29694)
* [ML] Fixes overflowing text in the anomalies table expanded row

* [ML] Switch to using euiTextTruncate to fix overflow

--- a/x-pack/plugins/ml/public/components/anomalies_table/_anomalies_table.scss
+++ b/x-pack/plugins/ml/public/components/anomalies_table/_anomalies_table.scss
@@ -95,12 +95,15 @@
         margin-top: 0px;
         flex-basis: 15%;
         font-size: inherit;
+        line-height: 1.5rem;
+        @include euiTextTruncate;
       }
 
       .euiDescriptionList__description {
         margin-top: 0px;
         flex-basis: 85%;
         font-size: inherit;
+        line-height: 1.5rem;
       }
 
       .filter-button {
